Fixed spacing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -110,6 +110,13 @@
     font-weight: 500; 
 }
 
+.view-recipe li {
+    margin-left: 50px;
+    margin-top: 30px;
+    font-size: 20px;
+    font-weight: 500; 
+}
+
 .button-container{
     text-align: center;
 }
